# home-assistant-integration

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.MD  README.md  SECURITY.md  WHATWATT_README.md  hacs.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  validate.yml
custom_components/whatwatt/: README.md  __init__.py  button.py  config_flow.py  const.py  diagnostics.py  example_mqtt_message.json  manifest.json  sensor.py  strings.json  test_mqtt_publish.py
custom_components/whatwatt/translations/: de.json  en.json  fr.json  it.json  pl.json
e2e/: README.md  conftest.py  docker-compose.yml  requirements.txt  run.sh  test_e2e.py
tests/: README.md  __init__.py  conftest.py  test_button.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_sensor.py
